--- a/_posts/2023-09-15-83.md
+++ b/_posts/2023-09-15-83.md
@@ -26,6 +26,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Patoarchitekci Short #34: Znów rzucamy mięsem. Dzisiaj wracamy na chwilę do raportu McKinsey'a i tematu badania skuteczności developerów. Wszystko za sprawą artykułu Orosza i jego komentarza do raportu. Porozmawiamy też o Oskarze Dudyczu i jego newsletterze na temat prototypowania biznesowego - raczej o wpisie Oskara, który popełnił w ramach jednego ze swoich newsletterów. Na koniec trochę o testach end-to-end. Kiedy, jak, gdzie, po co? I dlaczego część z nich warto szybko kasować? Zaczynamy?
 
 
