--- a/_posts/2023-09-22-84.md
+++ b/_posts/2023-09-22-84.md
@@ -37,6 +37,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Kolejny piątek - a więc kolejny odcinek Patoarchitektów. Gorącym kartoflem na dzisiaj są umierające skille w IT. Co powinien wiedzieć specjalista, a co może sobie odpuścić. W tej kwestii nasze zdania są podzielone, więc sporo się dzieje w dzisiejszym odcinku. Na koniec robi się lekko sentymentalnie, bo rozmawiamy o programie studiów i o tym, co z perspektywy praktyków IT, powinno się tam znaleźć, co znacznie ułatwia pracę specjalistom IT. Przesłuchaj od razu!
 
 
