--- a/_posts/2023-09-29-85.md
+++ b/_posts/2023-09-29-85.md
@@ -49,6 +49,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Patoarchitekci Short #35: Nowy odcinek dla wybitnych mięsożerców. Mnóstwo tematów, sporo ciekawych linków. 
 Omawiamy między innymi głośny proces Googla w USA, Azurowe Container Appsy i ich zawartość. Szymon rozkminia programistyczne interruptions i robie trochę rachunek sumienia. Łukasz z kolei nie zostawia suchej nitki na shit-postach Davida Himmera Hansona. 
 A to tylko mały fragment z tego, o czym się rozgadaliśmy. W środku jest o wiele więcej!
