--- a/_posts/2023-10-06-86.md
+++ b/_posts/2023-10-06-86.md
@@ -41,6 +41,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Patoarchitekci Short #36 Dziś przygotowaliśmy dla was kilka gorących tematów. Na samym początku zdradzimy Wam o czym będziemy mówić na konferencji Infoshare DEV i dlaczego warto dołączyć do nas 24 i 26 października. 
 
 Omawiamy najnowsze ruchy Amazona w świecie AI za ponad 4 miliardy dolarów. Szymon wciąż zastanawia się nad efektywnością pracy developerów, ale żeby nie było zbyt nudno, szybko przechodzimy do kwestii observability i analizy metryk. Na deser analiza ewolucji testowania w Microsoft. Czas start!
