--- a/_posts/2023-10-13-87.md
+++ b/_posts/2023-10-13-87.md
@@ -24,6 +24,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Przed Wami odcinek numer 87, a w nim... No cóż, robimy coś, czego dawno nie było. Bierzemy pod lupę Technology Radar od Thought Works. Będzie o tym, co nas zaskoczyło, co jest dla nas nowością i jakie WTF-y po drodze nas spotkały. Nie zostawiliśmy na tym dokumencie suchej nitki. Ale żeby było uczciwie, doceniliśmy to, co zasługiwało na docenienie :) Zatem, zapnijcie pasy i zanurzcie się w technologiczne rewelacje razem z nami
 
 
