--- a/_posts/2023-10-20-88.md
+++ b/_posts/2023-10-20-88.md
@@ -34,6 +34,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Dzisiaj spotykamy się w trochę większym gronie: naszym gościem jest Mariusz Gil, specjalista od event stormingu i podcaster "Better Software Design". Rozmawiamy o event stormingu od a do z - czyli od definicji, przez cały proces, aż po narzędzia. 
 
 Przemaglowaliśmy Mariusza dość dokładnie, więc można powiedzieć, że ten odcinek Pato to takie kompendium event stormingu. Enjoy!
