--- a/_posts/2023-10-27-89.md
+++ b/_posts/2023-10-27-89.md
@@ -38,6 +38,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Przygotujcie się na prawdziwy rollercoaster w dzisiejszym odcinku. Bierzemy pod lupę finanse GitHuba i Copilota – czyżby dopłacali do tego biznesu? Google rzuca światło na disaster recovery, a Cilium świętuje swoje graduation w CNCF. W Cloudflare pojawia się Hyper Drive – sprawdzamy czy to w ogóle warte zainteresowania. I na deser – nowy tool do incident response od Grafany. Bądźcie z nami, bo dzisiaj będzie się działo!
 
 
