--- a/_posts/2023-11-03-90.md
+++ b/_posts/2023-11-03-90.md
@@ -38,6 +38,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W dzisiejszym odcinku rozbieramy na części pierwsze nowy opensource'owy projekt od Microsoftu - Radius. Łukasz bierze go na warsztat, więc będzie się działo. Następnie zerkamy z niedowierzaniem na zakupy AWS - tak, zapłacili bilion za MS365. Czyżby nowy feature w ich infrastrukturze, czy po prostu chmura pełna ironii? Kończymy dyskusją o Terraform, gdzie Łukasz rozprawia się z klątwą, a Szymon broni, ale czy skutecznie? Zapnijcie pasy, startujemy!
 
 
