--- a/_posts/2023-11-17-92.md
+++ b/_posts/2023-11-17-92.md
@@ -33,6 +33,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Tym razem na warsztat bierzemy prezentację GitHuba podczas GitHub Universe 2023. Pytanie: czy warto w ogóle tym zawracać sobie głowę? Zdecydowanie tak. Jakie kąski wyłowiliśmy z całości? To przede wszystkim Copilot chat na silniku GPT-4. AI wchodzi na salony! Omawiamy też wersję Enterprise Copilota i zastanawiamy się, czy za moment nie będzie must-have'm w każdej firmie. Dodatkowo grillujemy AI Powered Security Features i rozważamy, czy język naturalny może faktycznie stać się językiem programowania. Gotowi? To zaczynamy!
 
 
