--- a/_posts/2023-11-24-93.md
+++ b/_posts/2023-11-24-93.md
@@ -29,6 +29,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Dzisiaj robimy deep dive w .NET Conf i Ignite 2023. Nie sądziliście chyba, że przemilczymy ten temat? Omówimy kilka ciekawych i wartych uwagi rzeczy, takich jak Dynamic Profile Guided Optimization, i Microsoft Security Adoption Framework. Będzie też kilka słów o AI i oczywiście o Copilocie.  Zapowiada się inspirująco? A jakże. Ale żeby nie było zbyt grzecznie. Szymon wytknie pierdolnik w danych, Łukasz obawia się że zrealizuje się cyberpunkowy scenariusz i żąda ujebania regulacyjnego. Co tu się w ogóle zadziało?
 
 
