--- a/_posts/2023-12-01-94.md
+++ b/_posts/2023-12-01-94.md
@@ -34,6 +34,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Odcinek w którym lekko marudzimy na przehypowanie rzeczywistości. Czasem aż odechciewa się śledzenia newsów. 
 
 Co poza tym? Rozmawiamy o konferencji Open AI Dev Day i możliwości budowania własnych, customowych chatów GPT - hit czy kit? Szymon analizuje alternatywę dla outboxa. Na dokładkę wyżymamy Serverless Vector Search for AI, przeglądamy CubeCon i newsy do AKS-a, a na koniec - mówimy o kłopotach Okty z bezpieczeństwem. 
