--- a/_posts/2023-12-08-95.md
+++ b/_posts/2023-12-08-95.md
@@ -32,6 +32,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Tym razem zaczynamy od szydery na .NET i odpalania jednej aplikacji od drugiej. Potem płynnie przechodzimy do rozmowy o wydajności zespołów IT. Łukasz tłumaczy swoją nienawiść do Enterprise Architect, a Szymon upiera się że narzędzie CI/CD jest najczęściej wykorzystywanym interfejsem do platformy.
 
 Na koniec stawiamy pytanie, czy zdalne środowiska developerskie mają sens? Jak myślicie? 
