--- a/_posts/2023-12-15-96.md
+++ b/_posts/2023-12-15-96.md
@@ -41,6 +41,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 To się podziało! W dzisiejszym odcinku skupiamy się na AWS re:Invent, analizujemy dominację Nvidii w technologii i zadajemy pytanie: czy Kubernetes jest faktycznie 'cepem'? 🤔 
 
 Mamy też kilka ogłoszeń patoparafialnych. Przygotowujemy się do wielkiego świętowania naszego setnego odcinka w Warszawie.
