--- a/_posts/2023-12-22-97.md
+++ b/_posts/2023-12-22-97.md
@@ -33,6 +33,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Zapnijcie pasy i trzymajcie się mocno, bo dzisiaj zabieramy Was w szaloną podróż bez trzymanki. Szymon i Łukasz rozprawiają szczerze o najgorętszych trendach i wpadkach w świecie IT. Tym razem idą na całość, odważnie omawiając wszystko, od Generative AI po Kubernetesy, serwując wiedzę prosto z mostu.
 Nie przegapcie też nadchodzącego setnego odcinka Patoarchitektów! Już 10 stycznia czeka na Was meetup w Warszawie, gdzie będziecie mieli niepowtarzalną okazję doświadczyć energii Szymona i Łukasza na żywo oraz spotkać się z innymi pasjonatami technologii. A to jeszcze nie wszystko! Specjalnie dla Was przygotowaliśmy  otwarte patoszkolenia, których nie możecie przegapić. Szczegóły znajdziecie w linkach do dzisiejszego odcinka i bezpośrednio w podcaście. Dołączcie do nas i bądźcie częścią tej niesamowitej technologicznej przygody!
 
@@ -43,7 +49,6 @@ Linki i ciekawe znaleziska:
 
 - [Meetup online z okazji 100. odcinka Pato - 17 stycznia 2024](https://events.teams.microsoft.com/event/e3c509f6-e713-41d9-a1bb-15a14436b030@7d58da1e-863a-433b-881a-eb613237f681)
 - [Otwarte patoszkolenie live [22.02.2024] Kubernetes the Hard Way](https://app.easycart.pl/checkout/78499600/22022024-kubernetes-the-hard-way)
-- [Protopia](https://protopia.tech/)
 - [Profil Protopii na LinkedIn](https://www.linkedin.com/company/protopia-tech/)
 - [The Pragmatic Engineer](https://www.pragmaticengineer.com/)
 - [Architecture Weekly](https://www.architecture-weekly.com/)
