--- a/_posts/2024-01-12-98.md
+++ b/_posts/2024-01-12-98.md
@@ -35,6 +35,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W dzisiejszym odcinku gościmy Andrzeja Sobczaka – specjalistę z zakresu Enterprise Architecture. Andrzej, doktor habilitowany, profesor w Szkole Głównej Handlowej, łączy wiedzę akademicką z praktycznym doświadczeniem w nowoczesnych technologiach.
 
 Podczas rozmowy z Łukaszem i Szymonem, Andrzej skupia się na kluczowych aspektach takich jak znaczenie modelowania, rola Enterprise Architecture w podejmowaniu strategicznych decyzji dotyczących rozwoju systemów i technologii, oraz przyszłe trendy i ewolucja roli architektury w dynamicznie zmieniającym się świecie technologii.
