--- a/_posts/2024-01-19-99.md
+++ b/_posts/2024-01-19-99.md
@@ -38,6 +38,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Tym razem rozkładamy na czynniki pierwsze zmiany w ocenach pracowników w tech-gigantach. Będzie też o tym, że audyty mogą nie być taką nudą, jak myślisz. Na deser serwujemy gorące newsy z świata baz danych. SLI, SLO i cała masa technicznych smaczków czekają!
 
 
