--- a/_posts/2024-01-26-100.md
+++ b/_posts/2024-01-26-100.md
@@ -39,6 +39,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W 100. odcinku Patoarchitektów wpadamy z mega dawką tech-talku! Rozkładamy na czynniki pierwsze newsy ze świata cloud i AI. 
 
 Rozmawiamy o Kubernetes, dzieląc się sekretami modelowania danych w SQL i NoSQL. Plus, deep dive w OpenTofu i Terraform – czy warto? Do tego AI w obronności, a Azure ma problemy z pojemnością? Zaskakujące? Sprawdźcie!
