--- a/_posts/2024-02-02-101.md
+++ b/_posts/2024-02-02-101.md
@@ -40,6 +40,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Nowy odcinek i nowe zamieszanie. Lubimy zamieszać w świecie IT, żeby się nie przypaliło! Co nas czeka w tym epizodzie? Będziemy rozmawiać o modelowaniu danych - jak je ugryźć nie tylko w SQL, ale i poza nim. Zagłębimy się w dyskusję na temat Change Data Capture (CDC) - czy to naprawdę magiczne rozwiązanie na wszystkie problemy? Przyjrzymy się aktualnym trendom i nowinkom w WebAssembly. Czy to przyszłość web developmentu? Na deser czeka na Was gorący temat: AI i zagrożenia bezpieczeństwa. Co nowego w świecie sztucznej inteligencji? Jesteście gotowi? Startujemy!
 
 
