--- a/_posts/2024-02-09-102.md
+++ b/_posts/2024-02-09-102.md
@@ -37,6 +37,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W najnowszym odcinku wkraczamy do świata, gdzie hardware goni za software'm, a sztuczna inteligencja wkracza na scenę z pompą. 
 
 Zastanawialiście się kiedyś, jak Discord radzi sobie z milionami użytkowników? Albo co się kryje za kulisami projektowania API, które łączy światy asynchroniczne? 
