--- a/_posts/2024-02-16-103.md
+++ b/_posts/2024-02-16-103.md
@@ -46,6 +46,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W najnowszym odcinkugościmy Andrzeja Dyjaka, eksperta z dwudziestoletnim stażem w dziedzinie bezpieczeństwa IT, który podzieli się z nami swoimi doświadczeniami i przemyśleniami na temat integracji praktyk bezpieczeństwa aplikacji w procesie wytwórczym. 
 
 Andrzej, zagorzały zwolennik podejścia DevSecOps, zdradzi, jak zapewnić bezpieczeństwo na każdym etapie cyklu życia oprogramowania i dlaczego warto traktować bezpieczeństwo jako integralną część projektowania i tworzenia aplikacji. 
