--- a/_posts/2024-02-23-104.md
+++ b/_posts/2024-02-23-104.md
@@ -40,6 +40,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Tym razem rozpakowujemy wszystko, co musisz wiedzieć o skarbach ukrytych w Visual Studio Code, badamy kręte ścieżki API testing, i odkrywamy, jak GitHub Copilot może stać się Twoim nowym najlepszym przyjacielem w codziennym programowaniu. 
 
 Nie zabraknie też dyskusji o Rabbit MQ i jego potencjale w zmienianiu gry w skalowalności aplikacji. 
