--- a/_posts/2024-03-01-105.md
+++ b/_posts/2024-03-01-105.md
@@ -36,6 +36,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W najnowszym odcinku zagłębiamy się w tematy, które definiują kierunek rozwoju technologii i zarządzania w branży IT. 
 
 Analizujemy wpływ stóp procentowych na wzrost i strategie organizacji, zmiany w roli engineering managerów w obliczu ekonomicznych turbulencji, oraz przyszłość ról testowych i ich ewolucję w kierunku większej automatyzacji. 
