--- a/_posts/2024-03-08-106.md
+++ b/_posts/2024-03-08-106.md
@@ -37,6 +37,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W najnowszym odcinku "Patoarchitektów" zanurzamy się w głębinach sztucznej inteligencji, rozprawiając o najgorętszych trendach i kontrowersyjnych technologiach, które wstrząsają branżą IT. 
 
 Przez meandry LLM-ów (Large Language Models), rzucamy światło na gorączkowe zmagania z AI i otwieramy debatę na temat przyszłości serverless oraz infrastruktury jako kodu. 
