--- a/_posts/2024-03-15-107.md
+++ b/_posts/2024-03-15-107.md
@@ -36,6 +36,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Siema, Patoarchitekci! Dzisiejszy odcinek zapowiada się wyjątkowo ciekawie. Zaczynamy od Cloudflare i ich nowości - firewalla dla AI, który ma chronić przed atakami nie z tej ziemi. Potem przeskakujemy do Rusta, gdzie analizujemy, czy jest on przyszłością programowania systemowego i co oznacza dla ekosystemu IT.
 Ale to nie wszystko! Rozkładamy na czynniki pierwsze, jak budować zespół w IT. Czy lepiej działać razem, czy każdy na swoim stanowisku? Plus, deep dive w temat, który każdy developer zna z autopsji - dlaczego kopiowanie cudzych architektur to nie zawsze dobry pomysł.
 
