--- a/_posts/2024-03-22-108.md
+++ b/_posts/2024-03-22-108.md
@@ -43,6 +43,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W dzisiejszym odcinku zanurzymy się głęboko w świat IT, rozpoczynając od kontrowersyjnego wpisu na LinkedInie, który zrobił spore zamieszanie wśród profesjonalistów z branży. 
 
 Rozprawimy się z mitami i rzeczywistością pracy w gigancie jak Amazon, przyglądając się zarówno złotym zasadom software engineering, jak i pułapkom, na które można natknąć się, podążając za big techowymi ideami. 
