--- a/_posts/2024-03-29-109.md
+++ b/_posts/2024-03-29-109.md
@@ -37,6 +37,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W tym odcinku "Patoarchitektów" rozmawiamy z Andrzejem Krzywdą, założycielem Arkency i guru Ruby on Rails, o tym, jak technologie ewoluują i stają się "legacy", ale też o tym, jak znaleźć w tym potencjał i odświeżyć starzejący się kod. 
 
 Andrzej dzieli się z nami swoim doświadczeniem w uładnianiu zastanych projektów, wprowadzaniu refaktoryzacji i wykorzystywaniu nowoczesnych podejść jak DDD, CQRS czy Hotwire do ożywienia "starych kości". 
