--- a/_posts/2024-04-05-110.md
+++ b/_posts/2024-04-05-110.md
@@ -35,6 +35,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Zapnijcie pasy, bo dzisiejszy odcinek Patoarchitektów zabierze Was w podróż przez algorytmiczne labirynty i architektoniczne zagadki, które rozpalą Wasze umysły! 
 
 Wracamy, by podzielić się historiami o tym, jak stare algorytmy nadal rządzą światem IT i dlaczego czasami lepiej postawić na sprawdzone rozwiązania niż na błyszczące nowinki. 
