--- a/_posts/2024-04-12-111.md
+++ b/_posts/2024-04-12-111.md
@@ -42,6 +42,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W nowym odcinku Patoarchitekci lecimy z tematem, który wraca jak bumerang – przegląd technologii Radaru od Thoughtworks. 
 
 Jak zwykle, będziemy drążyć cztery kąty technologii: od technik po narzędzia, platformy, aż do języków i frameworków. Zobaczymy, co tam Thoughtworks naknocił w swoich rekomendacjach, które oscylują od "bierz to i nie gadaj", po "lepiej omijaj szerokim łukiem".
