--- a/_posts/2024-04-19-112.md
+++ b/_posts/2024-04-19-112.md
@@ -4,10 +4,24 @@ title: '#112 Short #51'
 date: 2024-04-19 08:00:00 +0200
 description: 
 episode: "112"
-tags: []
+tags: ["redis","DualLicencing","opensource","azure","kubernetes","FleetManagement","devops","CloudSolutions","TechnologyNews"]
 spreaker: 59529927
 apple: 
 newsletter:  |
+  Serwus!
+  Nie możecie przegapić najnowszego epizodu Patoarchitektów, w którym zagłębiamy się w najświeższe newsy, które trzęsą fundamentami technologii open source i cloud computing. 
+  
+  W nowym odcinku, dostępnym na wszystkich głównych platformach podcastowych, porozmawiamy o kontrowersyjnych ruchach Redis'a w obszarze licencjonowania, nowościach od Microsoftu, które mogą zrewolucjonizować zarządzanie klastrami Kubernetes, oraz o tym, jak najnowsze projekty wpłyną na przyszłość obserwowalności i zarządzania w chmurze.
+  
+  👉 Sprawdźcie, co nowego w technologiach, które mogą zmienić Wasze codzienne operacje: <https://patoarchitekci.io/112/>
+  
+  Omówimy zmiany w Redis, które mogą wprowadzić nowe wyzwania dla deweloperów i firm korzystających z tej popularnej technologii. Będziemy również analizować, jak nowe narzędzia od Microsoftu, takie jak Fleet, mogą ułatwić życie DevOpsom poprzez efektywniejsze zarządzanie zasobami w chmurze.
+  
+   Dodatkowo, zastanowimy się nad wpływem projektów takich jak Garnet na przyszłość rozwiązań cache'ujących i ich wpływ na wydajność aplikacji.
+  
+  Nie przegapcie! Po więcej informacji, ciekawostek i dyskusji zapraszamy do słuchania naszego podcastu. Kliknijcie w link i dołączcie do naszych słuchaczy: <https://patoarchitekci.io/112/>
+  
+  Do następnego razu!
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -20,6 +34,17 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
+Cześć, Patoarchitekci! W dzisiejszym odcinku bierzemy na tapetę coś, co może wywrócić Wasze IT-światy do góry nogami – świeżutkie nowinki ze świata open source i nie tylko! 
+Będziemy grzebać w tematach od Redis i jego zmian w licencjonowaniu po nowinki z Azure, które mogą zmienić sposób, w jaki zarządzacie klastrami Kubernetes.
+ Przyjrzymy się też, jak Microsoft puszcza w świat kolejne projekty, które mogą totalnie namieszać w Waszych workflow'ach. Chcecie wiedzieć, które zmiany warto śledzić, a które mogą okazać się niewypałem? Lecimy z tematem!
+
+PS. Ten podcast powstaje dzięki Protopii. Protopia to Patoarchitekci, a Patoarchitekci to Protopia :) Sprawdź, jak możemy Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 
 Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
