--- a/_posts/2024-04-26-113.md
+++ b/_posts/2024-04-26-113.md
@@ -8,6 +8,21 @@ tags: ["llm","JSON","aws","ORM","devops","CICD","LongChainExtract","CloudFormati
 spreaker: 59649359
 apple: 
 newsletter:  |
+  Serwus!
+  
+  W najnowszym odcinku naszego podcastu zgłębiamy możliwości LLM-ów dzięki LangChain Extract, które pozwala na błyskawiczne przekształcanie nieustrukturyzowanych danych w struktury JSON. 
+  
+  Odcinek jest już dostępny we wszystkich łapkach modcastowych, a wszystkie materiały znajdziecie tutaj: <https://patoarchitekci.io/113/>
+  
+  Odkryjcie z nami, jak tę technikę można wykorzystać do efektywniejszej pracy i szybszego rozwoju projektów.
+  
+  Nie zabraknie też dyskusji na temat ostatnich ulepszeń w AWS Cloud Formation, które zdecydowanie przyspieszają i usprawniają tworzenie zasobów. Jak te zmiany wpłyną na codzienną pracę w chmurze? Jakie są zalety nowego podejścia do stabilizacji zasobów?
+  
+  Dołączcie do nas, aby nie przegapić tych fascynujących tematów, które mogą znacząco wpłynąć na Waszą efektywność i sposób pracy. Kliknijcie <https://patoarchitekci.io/113/>, aby przekonać się, jak nowoczesne technologie transformują IT.
+  
+  Zapraszamy do słuchania i dzielenia się swoimi przemyśleniami!
+  
+  Do następnego razu!
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -20,6 +35,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 W najnowszym odcinku bierzemy na warsztat gorące tematy, które każdy patoarchitekt powinien znać! Zaczniemy od nowości od LangChain - sprawdzimy, jak ich nowe narzędzie, LangChain Extract, umożliwia transformację nieustrukturyzowanych danych w precyzyjnie zdefiniowane schematy JSON. 
 
 To narzędzie, które może zrewolucjonizować codzienną pracę developerów, szczególnie kiedy liczy się czas i efektywność.
