--- a/_posts/2024-05-03-114.md
+++ b/_posts/2024-05-03-114.md
@@ -32,6 +32,12 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
+[Sprawdź Patoszkolenia!](https://patoarchitekci.io/szkolenia/)
+
+➡️ [04.06.2024 Architektura 101](https://app.easycart.pl/checkout/78499600/04062024-architektura-101)
+
+➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
+
 Witajcie w nowym odcinku „Patoarchitekci”! Dzisiaj skupiamy się na Google Cloud Next 2024, analizując wpływ AI na przyszłość technologii chmurowych. 
 
 Pokażemy Wam, jak nowe podejście do VM-ów z ARM może zmienić reguły gry w infrastrukturze IT, zagłębimy się w szczegóły technologii Gemini, i porównamy narzędzia do monitorowania wydajności aplikacji z nowoczesnymi rozwiązaniami w observability. 
