--- a/_posts/2024-05-10-115.md
+++ b/_posts/2024-05-10-115.md
@@ -8,6 +8,32 @@ tags: ["InfoQ","TechnologyRadar","Thoughtworks","PrivacyEngineering","graphql","
 spreaker: 59941965
 apple: 
 newsletter:  |
+  Serwus!
+  
+  Dzisiejszy odcinek to prawdziwa petarda! Bierzemy na warsztat coroczny raport InfoQ dotyczący trendów w architekturze IT i mierzymy się z jego zawartością bez owijania w bawełnę. Przygotujcie się na ostrych ocen i bezkompromisowych wniosków!
+  
+  Szybka przypominajka:
+  1️⃣ [Meetup patoarchitekci.io - zamknięcie 3 sezonu ](https://pato-koniec-3-sezonu.konfeo.com/pl/groups)- 06.06.2024
+  2️⃣ [Nie dla mięczaków: Patoszkolenia, które zmieniają zasady gry!](https://patoarchitekci.io/szkolenia/)
+  
+  Możecie go już posłuchać w ulubionej pace podcastowej. Nie zapomnijcie też odwiedzić strony, bo tam poza nowym odcinkiem jest jeszcze mn bóstwo dodatkowych materiałów! Tutaj link: <https://patoarchitekci.io/115/>
+  
+  **Co znajdziecie w tym odcinku:**
+  
+  - **Cell-Based Architecture** - czy to faktycznie rewolucyjne podejście do projektowania systemów, czy tylko przegrzewany stary kotlet? Rozprawiamy się z mitami i sprawdzamy, jakie miejsce ma to w realiach współczesnego IT.
+  
+  - **GraphQL Federation versus REST** - czy federacja GraphQL jest prawdziwym przełomem dla API? Analizujemy zalety i wady, porównujemy to z tradycyjnymi podejściami i oceniamy, jak może to wpłynąć na przyszłość projektowania interfejsów.
+  
+  - **Privacy Engineering** - w dobie rosnących obaw o prywatność, to podejście staje się coraz bardziej istotne. Zobaczcie, jak możecie zaimplementować najlepsze praktyki już na etapie projektowania swoich systemów, zanim regulacje was zaskoczą.
+  
+  - **Od Hype do Realności** - omawiamy, które z nowych technologii naprawdę zmienią oblicze branży, a które to tylko marketingowy szum bez realnego wpływu na naszą codzienną pracę.
+  
+  W odcinku nie zabraknie również porównań do Technology Radara od Thoughtworks - sprawdzimy, które trendy są na fali wznoszącej, a które już dawno powinny odejść w niepamięć.
+  
+  Zapraszamy do słuchania tego odcinka na Patoarchitekci.io lub przez Waszą ulubioną aplikację do podcastów. Nie dajcie sobie wcisnąć kitu - z nami poznacie prawdziwe oblicze IT!
+  **Link do odcinka:** [Kliknij tutaj, aby posłuchać](https://patoarchitekci.io/115/) >>
+  
+  Nie przegapcie tej dawki wiedzy bez cenzury!
   
 
   ## Posłuchaj odcinka na ⬇️
