--- a/_posts/2024-05-17-116.md
+++ b/_posts/2024-05-17-116.md
@@ -61,7 +61,12 @@ Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Prot
 
 Linki i ciekawe znaleziska:
 
-
+- [LinkedIn Mariusza](https://www.linkedin.com/in/mariuszdalewski/)
+- [SysOps/DevOps Polska](https://www.sysopspolska.pl/)
+- [SysOps/DevOps Polska - Facebook](https://www.facebook.com/sysopspolska)
+- [Grupa SysOps / DevOps Polska](https://www.facebook.com/groups/1520075404873229)
+- [Grupa SysOps / DevOps Polska: Po godzinach](https://www.facebook.com/groups/267322126975586)
+- [MDDV - Usługi DevOps, zarządzanie serwerami i infrastrukturą  ](https://www.mddv.pl/)
 
 ### Transkrypcja
 
