--- a/_posts/2024-05-17-116.md
+++ b/_posts/2024-05-17-116.md
@@ -56,6 +56,8 @@ Wkładamy kij w mrowisko i zastanawiamy się, **jak najnowsze zmiany w VMware wp
 
 Jeśli myślicie, że świat IT jest przewidywalny, to czeka Was niezła jazda bez trzymanki!
 
+[Meetup z okazji zamknięcie 3 sezonu - 06.06.2024](https://pato-koniec-3-sezonu.konfeo.com/pl/groups)
+
 
 Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
