--- a/_posts/2024-06-14-120.md
+++ b/_posts/2024-06-14-120.md
@@ -4,10 +4,35 @@ title: '#120 Short #55'
 date: 2024-06-14 08:00:00 +0200
 description: 
 episode: "120"
-tags: ["patoszkolenia","kubernetes","ai","opentelemetry","llm"]
-spreaker: 
+tags: ["patoszkolenia","kubernetes","ai","opentelemetry","llm","observability","mikrosierwisy","Grafana","prometeusz","azure","AdobeCreativeCloud"]
+spreaker: 60371520
 apple: 
 newsletter:  |
+  Serwus!
+  
+  Nowy odcinek Patoarchitektów już wystartował wie wszystkich możliwych apkach podcastowych. 
+  
+  Tutaj znajdziesz więcej materiałów i transkrypcję: <https://patoarchitekci.io/120/>
+  
+  🚀 **Przygotujcie się na Eksplozję Wiedzy!** W najnowszym epizodzie naszego podcastu rozpruwamy rzeczywistość IT na strzępy! Mikroserwisy – czy są już tylko starym, zmurszałym chlebem w świecie ciągle zmieniających się technologii?
+  
+  A może to nadal potężne narzędzie do skalowania i optymalizacji Twojej infrastruktury? Właśnie dzisiaj zabieramy Was na podróż przez meandry decyzji architektonicznych, które kształtują prawdziwą zwinność firm.
+  
+  
+  💥 **Grafana, Loki, Tempo vs. Pixie – Kto Króluje w Ringu Observability?** Zanurkujemy głęboko w morze narzędzi monitorujących. Odkryjemy, które z nich faktycznie są warte Twojej uwagi, a które możesz spokojnie odesłać na emeryturę. Plus, dowiesz się, jak te technologie wpisują się (lub nie) w KPI i cele Twojego zespołu.
+  
+  
+  👀 **Kubernetes – Kto Nim Rządzi?** Czy AWS wciąż dominuje scenę, czy może Azure i Google Cloud zaczynają przejmować stery? Łukasz ujawnia najnowsze dane, które mogą totalnie zmienić Twoje postrzeganie rynku.
+  
+  
+  🔗 **Kliknij tutaj aby odkryć więcej!** Niech ten odcinek będzie Twoim przewodnikiem po najbardziej gorących i kontrowersyjnych tematach, które obecnie buzują w branży IT.
+  
+  
+  Nie przegap! To może być ten moment, kiedy to, co wiesz o IT, zostanie wywrócone do góry nogami. Czy jesteś gotów na to wyzwanie? Sprawdź najnowszy odcinek "Patoarchitektów" i dołącz do dyskusji, która już teraz rozpala umysły i serwery!
+  
+  Link do odcinka: <https://patoarchitekci.io/120/>
+  
+  Do następnego razu!
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -26,6 +51,12 @@ newsletter:  |
 
 ➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
 
+Tym razem wywracamy do góry nogami tematy, które spędzają sen z powiek każdemu szanującemu się specjaliście IT. Zastanawiasz się, czy mikroserwisy to nadal złoty standard, czy już przestarzała moda? Dziś zagłębimy się w to, jak firmy rzeczywiście decydują o podziale aplikacji i jak to wpływa na ich zwinność i skalowalność.
+
+Nie obędzie się bez porównań – rzucimy światło na różnice między narzędziami monitorującymi jak Grafana, Loki, i Tempo a nowoczesnymi podejściami takimi jak Pixie na eBPF. Które z nich rzeczywiście dają ci to, czego potrzebujesz do skutecznej obserwacji i zarządzania wydajnością?
+A na deser, jak observability wpasowuje się w KPI i cele twojego zespołu? Czy jesteś gotów do tego, by te narzędzia naprawdę pracowały na twój sukces?
+
+Przygotuj się na ostry rzut okiem na to, co jest hot, a co już się przejadło w świecie IT. Startujemy!
 
 
 Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
@@ -40,7 +71,7 @@ Linki i ciekawe znaleziska:
 - [Adobe wants to use your work to train its AI, and everyone is mad at itAdobe wants to use your work to train its AI, and everyone is mad at it](https://www.androidauthority.com/adobe-terms-update-ai-content-3449332/)
 - [A Deep Dive Into OpenTelemetry Metrics](https://www.timescale.com/blog/a-deep-dive-into-open-telemetry-metrics/)
 - [Update on the Recall preview feature for Copilot+ PCs  ](https://blogs.windows.com/windowsexperience/2024/06/07/update-on-the-recall-preview-feature-for-copilot-pcs/)
-- [x.com](https://x.com/dalibali2/status/1798827893205966999)
+- [Forrester is not a serious company - AI Model market](https://twitter.com/dalibali2/status/1798827893205966999)
 - [The Forrester Wave™: AI Foundation Models for Language, Q2 2024  ](https://cloud.google.com/blog/products/ai-machine-learning/the-forrester-wave-ai-foundation-models-for-language-q2-2024)
 
 ### Transkrypcja
